# stock-be

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  pytest.ini  tox.ini
core/: urls.py
core/exception/: exception.py
core/middleware/: auth_middleware.py
core/migrations/: 0001_initial.py
core/models/: base_model.py  user.py
core/templates/: login.html
core/util/: token_generator.py
core/viewset/: login.py  refresh_token.py
customer/: admin.py  urls.py
customer/dataclass/: customer_dataclass.py
customer/migrations/: 0001_initial.py  0002_alter_customers_nick_name.py
customer/models/: customers_model.py
customer/serializers/: customers_serializer.py
customer/services/: customer_services.py
customer/tests/: test_customers.py
customer/viewset/: customers_viewset.py
line/services/: line_services.py
line/templates/: line_callback.html
line/viewset/: line_viewset.py
seed/: seed_data.sql
stock/: admin.py  constant.py  template_urls.py  urls.py
stock/dataclass/: barcode_dataclass.py  invoice_dataclass.py  order_sales_dataclass.py
stock/migrations/: 0001_initial.py  0002_itemtransaction.py  0002_remove_items_price.py  0003_alter_itemtransaction_transaction_type.py  0003_salesorder_saleorderitem.py  0004_alter_items_options_items_alert_threshold.py  0005_alter_itemtransaction_transaction_type.py
stock/models/: category.py  invoce.py  invoice.py  items.py  items_model.py  sales_order.py  transaction.py  units_model.py
stock/serializers/: category_serializer.py  (+4 more)
stock_be/: asgi.py  settings.py  urls.py  wsgi.py
(+14 files in other folders)
